cleaned up directory structure and made modifications to validation files in delphi directory

--- a/delphi/rust/experiments/Cargo.toml
+++ b/delphi/rust/experiments/Cargo.toml
@@ -42,7 +42,11 @@ path = "src/lib.rs"
 
 [[bin]] 
 name = "compact-cnn-inference"
-path = "src/inference/compactCNN/inference.rs"
+path = "src/inference/compactCNN/single_inference.rs"
+
+[[bin]]
+name = "compact-cnn-accuracy"
+path = "src/validation/compactCNN/validate.rs"
 
 [[bin]]
 name = "minionn-inference"
