--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,14 @@ python/duplicate_results/__pycache__
 python/__pycache__
 author.py
 case-studies/driverdrowsiness/models/__pycache__
+case-studies/driverdrowsiness/pretrained/sub1
+case-studies/driverdrowsiness/pretrained/sub2
+case-studies/driverdrowsiness/pretrained/sub3
+case-studies/driverdrowsiness/pretrained/sub4
+case-studies/driverdrowsiness/pretrained/sub5
+case-studies/driverdrowsiness/pretrained/sub6
+case-studies/driverdrowsiness/pretrained/sub7
+case-studies/driverdrowsiness/pretrained/sub8
+case-studies/driverdrowsiness/pretrained/sub9
+case-studies/driverdrowsiness/pretrained/sub10
+case-studies/driverdrowsiness/pretrained/sub11
