--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 repo_token
 EzPC
+case_studies/traffic-rule-violation/source/*
 case_studies/traffic-flow-prediction/plaintext
 case_studies/traffic-flow-prediction/notes
 case_studies/traffic-rule-violation/crypten
@@ -9,7 +10,16 @@ case_studies/traffic-rule-violation/data/hyps
 case_studies/traffic-rule-violation/data/images
 case_studies/traffic-rule-violation/data/scripts
 case_studies/traffic-rule-violation/data/debug
-case_studies/traffic-rule-violation/experiments
+case_studies/traffic-rule-violation/experiments/batch_size_exps
+case_studies/traffic-rule-violation/experiments/batched_val
+case_studies/traffic-rule-violation/experiments/debug
+case_studies/traffic-rule-violation/experiments/gpu_sec_outs
+case_studies/traffic-rule-violation/experiments/img_visuals
+case_studies/traffic-rule-violation/experiments/model_type_exps
+case_studies/traffic-rule-violation/experiments/plain_out
+case_studies/traffic-rule-violation/experiments/rlr_detect_results
+case_studies/traffic-rule-violation/experiments/img_size_exps
+case_studies/traffic-rule-violation/experiments/sec_outs
 case_studies/traffic-rule-violation/model-info
 case_studies/traffic-rule-violation/yolov5
 case_studies/traffic-rule-violation/crypten_experiment.ipynb
