removed a bunch of unecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,36 @@
+# local
 repo_token
-EzPC
 .vscode
+
+# systems
+delphi/rust/protocols-sys/c++/build
+EzPC
+
+# drowsiness detection (included)
 case_studies/driverdrowsiness/__pycache__
+case-studies/driverdrowsiness/data/dataset.mat
+case_studies/driverdrowsiness/data
+case_studies/driverdrowsiness/models/__pycache__
+python/duplicate_results/__pycache__
+
+## pretrained models
+case_studies/driverdrowsiness/pretrained/sub1
+case_studies/driverdrowsiness/pretrained/sub2
+case_studies/driverdrowsiness/pretrained/sub3
+case_studies/driverdrowsiness/pretrained/sub4
+case_studies/driverdrowsiness/pretrained/sub5
+case_studies/driverdrowsiness/pretrained/sub6
+case_studies/driverdrowsiness/pretrained/sub7
+case_studies/driverdrowsiness/pretrained/sub8
+case_studies/driverdrowsiness/pretrained/sub9
+case_studies/driverdrowsiness/pretrained/sub10
+case_studies/driverdrowsiness/pretrained/sub11
+
+# traffic flow prediction (not included)
+case_studies/traffic_flow_prediction
+
+# traffic rule violation (included)
 case_studies/traffic_rule_violation/source/*
-case_studies/traffic_rule_prediction/plaintext
-case_studies/traffic_rule_prediction/notes
 case_studies/traffic_rule_violation/crypten
 case_studies/traffic_rule_violation/debug
 case_studies/traffic_rule_violation/__pycache__
@@ -37,22 +63,12 @@ case_studies/traffic_rule_violation/yolov5s_detect.onnx
 case_studies/traffic_rule_violation/yolov5s.onnx
 case_studies/traffic_rule_violation/yolov5s.pt
 case_studies/traffic_rule_violation/yolov5x.pt
-case-studies/driverdrowsiness/data/dataset.mat
-delphi/rust/protocols-sys/c++/build
-python/python_models/__pycache__
-python/duplicate_results/__pycache__
-python/__pycache__
-author.py
-case_studies/driverdrowsiness/data
-case_studies/driverdrowsiness/models/__pycache__
-case_studies/driverdrowsiness/pretrained/sub1
-case_studies/driverdrowsiness/pretrained/sub2
-case_studies/driverdrowsiness/pretrained/sub3
-case_studies/driverdrowsiness/pretrained/sub4
-case_studies/driverdrowsiness/pretrained/sub5
-case_studies/driverdrowsiness/pretrained/sub6
-case_studies/driverdrowsiness/pretrained/sub7
-case_studies/driverdrowsiness/pretrained/sub8
-case_studies/driverdrowsiness/pretrained/sub9
-case_studies/driverdrowsiness/pretrained/sub10
-case_studies/driverdrowsiness/pretrained/sub11
+
+# multi-agent implementation
+case_studies/rlr_agent_src
+case_studies/green.png
+case_studies/yolov5n.pt
+case_studies/yolov5s.pt
+
+# writeups
+case_studies/manuscript
