--- a/.gitignore
+++ b/.gitignore
@@ -66,10 +66,12 @@ case_studies/traffic_rule_violation/yolov5x.pt
 case_studies/traffic_rule_violation/pretrained
 
 # multi-agent implementation
+case_studies/dev_experiments
 case_studies/rlr_agent_src
 case_studies/green.png
 case_studies/yolov5n.pt
 case_studies/yolov5s.pt
+case_studies/__pycache__
 
 # writeups
 case_studies/manuscript
